[package]
name = "primitives"
version = "4.0.0-dev"
authors = ["Impetus Dev"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

fp-account = { workspace = true, features = ["serde"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"fp-account/std",
]
